syntax = "proto3";
package auth;

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string success = 1;
    string userlogin = 2;
    string password = 3;
    string avatar_url = 4;
    uint64 user_id = 5;

    bytes encrypted_private_key = 6;
    bytes salt = 7;
    bytes nonce = 8;

    bytes public_key = 9;
}
