syntax = "proto3";
package messages;

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    string success = 1;
    string errorMes = 2;
}
